RESOLVED FIXED72802
[GTK] Slider thumb is not centered on the track with the unico theme
https://bugs.webkit.org/show_bug.cgi?id=72802
Summary [GTK] Slider thumb is not centered on the track with the unico theme
Martin Robinson
Reported 2011-11-19 10:22:07 PST
It seems that the slider thumb is resized by the trough border when painting. I don't see this happening in the GTK+ sources and removing this resize re-center the thumb.
Attachments
Patch (2.42 KB, patch)
2011-11-19 10:31 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-11-19 10:31:33 PST
Philippe Normand
Comment 2 2012-01-03 09:26:35 PST
Comment on attachment 115956 [details] Patch Ok!
WebKit Review Bot
Comment 3 2012-01-03 10:55:27 PST
Comment on attachment 115956 [details] Patch Clearing flags on attachment: 115956 Committed r103945: <http://trac.webkit.org/changeset/103945>
WebKit Review Bot
Comment 4 2012-01-03 10:55:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.