[GTK] Slider thumb is not centered on the track with the unico theme https://bugs.webkit.org/show_bug.cgi?id=72802

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-01-03
Reviewed by Philippe Normand.

No new tests. This only applies to certain GTK+ themes.
Existing tests cover the default GTK+ theme.

* platform/gtk/RenderThemeGtk3.cpp:
(WebCore::RenderThemeGtk::paintSliderThumb): Do not resize the
slider thumb by the trough border.

Canonical link: https://commits.webkit.org/92242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103945 268f45cc-cd09-0410-ab3c-d52691b4dbfc